--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    <!-- end header -->
    <!-- start main section -->
    <main>
-    <section class="container mr-top">
+    <section class="container">
         <div class="container-images">
             <div><img src="img/team1.png" alt=""></div>
             <div><img src="img/team2.png" alt=""></div>
@@ -76,10 +76,7 @@
                 <h3>Awesome Modern Design</h3>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
             </div>
-            <div class="device-details">
-                <h3> Super Easy to Edit</h3>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
-            </div>
+    
         </div>
         <div class="images">
             <img src="images/architect.png" alt="">
