--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
 
             <div class="achievement">
-               <div>
+               <div class="achieve">
                 <img src="images/icons/ribon.png" alt="">
                 <h2>54</h2>
                 <p>Awards Winnings</p>
                </div>
-               <div>
+               <div class="achieve">
                 <img src="images/icons/customers.png" alt="">
                 <h2>1458</h2>
                 <p>Project Finished</p>
                </div>
-               <div>
+               <div class="achieve">
                 <img src="images/icons/projects.png" alt="">
                 <h2>590</h2>
                 <p>Clients Worked </p>
                </div>
-               <div>
+               <div class="achieve">
                 <img src="images/icons/email.png" alt="">
                 <h2>22578</h2>
                 <p>Email Send </p>
