--- a/index.html
+++ b/index.html
@@ -89,10 +89,12 @@
 
     <!-- Event start -->
 
-        <section class="events mr-top">
-            <h2>Some Facts</h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-
+        <section class="events">
+            <div class="achive-text-part">
+                <h2>Some Facts</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+    
+            </div>
             <div class="achievement">
                <div class="achieve">
                 <img src="images/icons/ribon.png" alt="">
@@ -128,8 +130,9 @@
         <div class="details">
             <div class="feature-title">
                 <h2>Featured products at one place</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
             </div>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+          
             <button class="btn-primary">Join Now</button>
         </div>
 
